--- a/src/components/Pages/Login/Login.css
+++ b/src/components/Pages/Login/Login.css
@@ -6,45 +6,49 @@
   background: url("../../../assets/img/2.jpg") no-repeat;
   background-size: cover;
   background-position: center;
+  padding: 20px;
 }
+
 .wrapper {
   background-color: transparent;
-  width: 420px;
+  width: 400px;
   color: white;
   border-radius: 10px;
   backdrop-filter: blur(20px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  padding: 30px 40px;
-  border: 2px solid rgba(255, 255, 255, 2);
+  padding: 35px 30px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 .wrapper h1 {
   text-align: center;
-  color: black;
+  color: #ffffff;
+  margin-bottom: 25px;
 }
 
 .input-box {
   width: 100%;
   height: 50px;
   position: relative;
-  margin: 30px 0px;
+  margin: 20px 0;
 }
+
 .input-box input {
   width: 100%;
   height: 100%;
   background: transparent;
   border: none;
   outline: none;
-  border: 2px solid rgba(255, 255, 255, 2);
+  border: 2px solid rgba(255, 255, 255, 0.6);
   border-radius: 40px;
   font-size: 16px;
   color: white;
-  padding: 20px 45px 20px 20px;
+  padding: 0 10px 0 20px;
+  box-sizing: border-box;
 }
 
 .input-box input::placeholder {
   color: white;
-  padding: 10px;
 }
 
 .input-box i {
@@ -58,13 +62,13 @@
 .wrapper .remember-forgot {
   display: flex;
   justify-content: space-between;
-  font-size: 14.5px;
-  margin: -15px 0px 15px;
+  font-size: 14px;
+  margin: 10px 0 20px;
 }
 
 .wrapper .remember-forgot label input {
   accent-color: white;
-  margin-right: 3px;
+  margin-right: 5px;
 }
 
 .wrapper .remember-forgot a {
@@ -88,13 +92,22 @@
   font-size: 16px;
   color: #333;
   font-weight: 600;
+  margin-top: 10px;
+}
+
+.google-login-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.google-login-container p {
+  margin-bottom: 10px;
 }
 
 .wrapper .register-link {
-  font-size: 14.5px;
+  font-size: 14px;
   text-align: center;
-  margin-top: 20px;
-  margin: 20px 0 15px;
+  margin-top: 25px;
 }
 
 .register-link p a {
