--- a/src/components/Pages/Login/Login.css
+++ b/src/components/Pages/Login/Login.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 20px;
   position: relative;
   overflow: hidden;
@@ -117,7 +117,8 @@
   align-items: center;
   margin-bottom: 25px;
   font-size: 14px;
-  color: #bf1650;
+  color: #f0619a;
+  font-weight: 600;
 }
 
 .login-options label {
@@ -170,12 +171,12 @@
 .google-login {
   text-align: center;
   margin-bottom: 25px;
-  color: #bf1650;
+  color: #f0619a;
   font-weight: 600;
 }
 
 .google-login p {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 /* Link đăng ký */
